--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>K A Giri</groupId>
-  <artifactId>K Srihari</artifactId>
-  <version>17/02/2001</version>
+  <groupId>Giri</groupId>
+  <artifactId>Srihari</artifactId>
+  <version>17.02.2001</version>
 
   <name>calculator_addition</name>
 
